Fixed layout issues on Employment page

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1790,7 +1790,7 @@ body.single-tribe_events {
   .fullwidth {
     .wrapper {
       padding-top: 60px;
-      padding-bottom: 60px;
+      padding-bottom: 40px;
     }
     .buttondiv {
       margin-bottom: 20px;
@@ -2488,7 +2488,7 @@ body.single-activities {
 
 .titlediv.nomb {
   .page-title {
-    margin-top: 45px;
+    margin-top: 50px;
     margin-bottom: 0!important;
   }
 }
